# balance_bot

./: .gitignore  CMakeLists.txt  README.md  debug.sh  setup.sh  upload.sh  upload_jetson.sh
comms/: CMakeLists.txt
comms/include/: mbot_lcm_msgs_serial.h
comms/include/comms/: listener.h  mbot_channels.h  mbot_lcm_msgs_serial.h
comms/src/: listener.c  mbot_lcm_msgs_serial.c
mbot/: CMakeLists.txt
mbot/include/mbot/defs/: mbot_defs.h  mbot_diff_defs.h  mbot_omni_defs.h  mbot_params.h  mbot_pins.h
mbot/include/mbot/encoder/: encoder.h
mbot/include/mbot/fram/: fram.h
mbot/include/mbot/imu/: bhy_support.h  imu.h
mbot/include/mbot/imu/firmware/: BHI160B_fw.h
mbot/include/mbot/motor/: motor.h
mbot/src/barometer/: barometer.c
mbot/src/defs/: mbot_defs.c
mbot/src/encoder/: encoder.c
mbot/src/fram/: fram.c
mbot/src/imu/: bhy.c  bhy_support.c  bhy_uc_driver.c  imu.c
mbot/src/motor/: motor.c
mbot/src/utils/: utils.c
python/: Controller_Tuner.py  balance_test_drive.py  mbot_test_drive.py  mbot_test_drive_omni.py
rc/include/rc/current/: current.h
rc/include/rc/defs/: mbot_defs.h
rc/include/rc/encoder/: encoder.h
rc/include/rc/motor/: motor.h
rc/src/current/: current.c
rc/src/defs/: mbot_defs.c
rc/src/encoder/: encoder.c
rc/src/fram/: fram.c
rc/src/motor/: motor.c
rc/src/mpu/: mpu.c
src/: CMakeLists.txt  controller.h  mbot.c  mbot.h  odometry.c  odometry.h  pid_filter.h  print_tables.c  print_tables.h
tests/: CMakeLists.txt  balance.c  balance.h  mbot_barometer_test.c  mbot_bhy_test.c  mbot_calibrate_classic.c  mbot_calibrate_omni.c  mbot_current_control_test.c  mbot_encoder_test.c  mbot_fram_test.c  mbot_imu_test.c  mbot_motor_analyze.c  mbot_motor_test.c  pico_current_control_test.c  pico_encoder_test.c  pico_fram_test.c  pico_motor_analyze.c  pico_motor_test.c
